==> bcmi-labs/arduino-core-stm32f4/cores/arduino/stm32/timer.c <==
#include "stm32_def.h"
#include "hw_config.h"
#include "timer.h"
#include "digital_io.h"
#include "clock.h"
#include "analog.h"
#include "variant.h"
#define TIMER_NUM (22)

void TimerHandleInit(stimer_t *obj, uint16_t period, uint16_t prescaler)
{
  if(obj == NULL)
    return;

  TIM_HandleTypeDef *handle = &(obj->handle);

  handle->Instance               = obj->timer;
  handle->Init.Prescaler         = prescaler;
  handle->Init.CounterMode       = TIM_COUNTERMODE_UP;
  handle->Init.Period            = period;
  handle->Init.ClockDivision     = TIM_CLOCKDIVISION_DIV1;
#ifndef STM32L0xx
  handle->Init.RepetitionCounter = 0x0000;
#endif
  if(HAL_TIM_Base_Init(handle) != HAL_OK){
    return;
  }

  if(HAL_TIM_Base_Start_IT(handle) != HAL_OK){
    return;
  }
}

void TimerHandleDeinit(stimer_t *obj)
{
  HAL_TIM_Base_Stop_IT(&(obj->handle));
  HAL_TIM_Base_DeInit(&(obj->handle));
}

void TimerPulseInit(stimer_t *obj, uint16_t period, uint16_t pulseWidth, void (*irqHandle)(stimer_t*, uint32_t))
{
  TIM_OC_InitTypeDef sConfig = {};
  TIM_HandleTypeDef *handle = &(obj->handle);

  obj->timer = TIMER_SERVO;

  //min pulse = 1us - max pulse = 65535us
  handle->Instance               = obj->timer;
  handle->Init.Period            = period;
  handle->Init.Prescaler         = (uint32_t)(getTimerClkFreq(obj->timer) / (1000000)) - 1;
  handle->Init.ClockDivision     = 0;
  handle->Init.CounterMode       = TIM_COUNTERMODE_UP;
#ifndef STM32L0xx
  handle->Init.RepetitionCounter = 0;
#endif
  obj->irqHandleOC = irqHandle;

  sConfig.OCMode        = TIM_OCMODE_TIMING;
  sConfig.Pulse         = pulseWidth;
  sConfig.OCPolarity    = TIM_OCPOLARITY_HIGH;
  sConfig.OCFastMode    = TIM_OCFAST_DISABLE;
#ifndef STM32L0xx
  sConfig.OCNPolarity   = TIM_OCNPOLARITY_HIGH;
  sConfig.OCIdleState   = TIM_OCIDLESTATE_RESET;
  sConfig.OCNIdleState  = TIM_OCNIDLESTATE_RESET;
#endif
  HAL_NVIC_SetPriority(timermap_irq(obj->timer, TimerMap_CONFIG), 14, 0);
  HAL_NVIC_EnableIRQ(timermap_irq(obj->timer, TimerMap_CONFIG));

  if(HAL_TIM_OC_Init(handle) != HAL_OK) return;

  if(HAL_TIM_OC_ConfigChannel(handle, &sConfig, TIM_CHANNEL_1) != HAL_OK) return;
  if(HAL_TIM_OC_Start_IT(handle, TIM_CHANNEL_1) != HAL_OK) return;
}

void TimerPulseDeinit(stimer_t *obj)
{
  TIM_HandleTypeDef *handle = &(obj->handle);

  obj->irqHandleOC = NULL;

  HAL_NVIC_DisableIRQ(timermap_irq(obj->timer, TimerMap_CONFIG));

  if(HAL_TIM_OC_DeInit(handle) != HAL_OK) return;
  if(HAL_TIM_OC_Stop_IT(handle, TIM_CHANNEL_1) != HAL_OK) return;
}

void HAL_TIMx_PeriodElapsedCallback(stimer_t *obj)
{

  if(get_GPIO_Port(STM_PORT(obj->pin)) != NULL) {
    if(obj->pinInfo.count > 0){
      obj->pinInfo.count--;

      if(obj->pinInfo.state == 0) {
        obj->pinInfo.state = 1;
        digital_io_write(get_GPIO_Port(STM_PORT(obj->pin)), STM_GPIO_PIN(obj->pin), 1);
      }
      else {
        obj->pinInfo.state = 0;
        digital_io_write(get_GPIO_Port(STM_PORT(obj->pin)), STM_GPIO_PIN(obj->pin), 0);
      }
    }
    else if(obj->pinInfo.count == -1) {
      if(obj->pinInfo.state == 0) {
        obj->pinInfo.state = 1;
        digital_io_write(get_GPIO_Port(STM_PORT(obj->pin)), STM_GPIO_PIN(obj->pin), 1);
      }
      else {
        obj->pinInfo.state = 0;
        digital_io_write(get_GPIO_Port(STM_PORT(obj->pin)), STM_GPIO_PIN(obj->pin), 0);
      }
    }
    else {
      digital_io_write(get_GPIO_Port(STM_PORT(obj->pin)), STM_GPIO_PIN(obj->pin), 0);
    }
  }
}

void TimerPinInit(stimer_t *obj, uint32_t frequency, uint32_t duration)
{
  uint8_t end = 0;
  uint32_t timClkFreq = 0;
  // TIMER_TONE freq is twice frequency
  uint32_t timFreq = 2*frequency;
  uint32_t prescaler = 1;
  uint32_t period = 0;

  if(frequency > MAX_FREQ)
    return;

  obj->timer = TIMER_TONE;
  obj->pinInfo.state = 0;

  //Calculate the toggle count
  if (duration > 0) {
    obj->pinInfo.count = ((timFreq * duration) / 1000);
  }
  else {
    obj->pinInfo.count = -1;
  }

  digital_io_init(obj->pin, GPIO_MODE_OUTPUT_PP, GPIO_NOPULL);
  timClkFreq = getTimerClkFreq(obj->timer);

  while(end == 0) {
    period = ((uint32_t)( timClkFreq / timFreq / prescaler)) - 1;

    if((period >= 0xFFFF) && (prescaler < 0xFFFF))
      prescaler++; //prescaler *= 2;

    else
      end = 1;
  }

  if((period < 0xFFFF) && (prescaler < 0xFFFF)) {
    obj->irqHandle = HAL_TIMx_PeriodElapsedCallback;
    TimerHandleInit(obj, period, prescaler-1);
  }
  else {
    TimerHandleDeinit(obj);
  }
}

uint32_t getTimerCounter(stimer_t *obj)
{
  return __HAL_TIM_GET_COUNTER(&(obj->handle));
}

void setTimerCounter(stimer_t *obj, uint32_t value)
{
  __HAL_TIM_SET_COUNTER(&(obj->handle), value);
}

void setCCRRegister(stimer_t *obj, uint32_t channel, uint32_t value)
{
  __HAL_TIM_SET_COMPARE(&(obj->handle), channel*4, value);
}
